--- a/zzzvold_1_3_kNN_Iris_Classification.ipynb
+++ b/zzzvold_1_3_kNN_Iris_Classification.ipynb
@@ -31,12 +31,13 @@
         "import pandas as pd\n",
         "import numpy as np\n",
         "\n",
-        "df = pd.read_csv(\"https://raw.githubusercontent.com/be-prado/csci4521/refs/heads/main/iris.csv\")"
+        "df = pd.read_csv(\"https://raw.githubusercontent.com/be-prado/csci4521/refs/heads/main/iris.csv\")\n",
+        "names = list(df.columns) #Save column names\n"
       ],
       "metadata": {
         "id": "nJNoBorVdW7v"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -59,9 +60,9 @@
           "height": 424
         },
         "id": "bKF7QTOp3NH0",
-        "outputId": "b3b276c8-fe5c-422a-8c88-f2ab564d5e0c"
+        "outputId": "e65034e6-764e-429d-b980-aa6f970a058b"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -84,7 +85,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-e73a0444-70f9-47ba-8ac7-8681bfacb7ba\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-a746fe67-a87f-4f0e-b5ad-7cb225452db4\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -206,7 +207,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e73a0444-70f9-47ba-8ac7-8681bfacb7ba')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a746fe67-a87f-4f0e-b5ad-7cb225452db4')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -258,12 +259,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-e73a0444-70f9-47ba-8ac7-8681bfacb7ba button.colab-df-convert');\n",
+              "        document.querySelector('#df-a746fe67-a87f-4f0e-b5ad-7cb225452db4 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-e73a0444-70f9-47ba-8ac7-8681bfacb7ba');\n",
+              "        const element = document.querySelector('#df-a746fe67-a87f-4f0e-b5ad-7cb225452db4');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -283,8 +284,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-b303bf43-15e6-4704-b0ac-869ad6c35fd9\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-b303bf43-15e6-4704-b0ac-869ad6c35fd9')\"\n",
+              "    <div id=\"df-b643cb03-95ca-41f2-8e97-d7b5ff2295d0\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-b643cb03-95ca-41f2-8e97-d7b5ff2295d0')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -403,14 +404,14 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-b303bf43-15e6-4704-b0ac-869ad6c35fd9 button');\n",
+              "            document.querySelector('#df-b643cb03-95ca-41f2-8e97-d7b5ff2295d0 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
               "      </script>\n",
               "    </div>\n",
               "\n",
-              "  <div id=\"id_a9824fe0-6994-424a-838c-bd6911f38d25\">\n",
+              "  <div id=\"id_d087c9ae-937d-4c62-9fe8-a7f76ecb5036\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -454,7 +455,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_a9824fe0-6994-424a-838c-bd6911f38d25 button.colab-df-generate');\n",
+              "        document.querySelector('#id_d087c9ae-937d-4c62-9fe8-a7f76ecb5036 button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -481,9 +482,209 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#Choose which data is featuers (X) and labels (y)\n",
+        "X = df[ ['sepal.length', 'sepal.width','petal.length','petal.width'] ].to_numpy()\n",
+        "y = df['variety'].to_numpy()\n",
+        "\n",
+        "for a in y['variety']:\n",
+        "  if a == \"Setosa\":\n",
+        "    a = 0\n",
+        "  if a == \"Vericolor\":\n",
+        "    a = 1\n",
+        "  if a == \"Virginia\":\n",
+        "    a = 2\n",
+        "y.head()"
+      ],
       "metadata": {
-        "id": "_U-jQU6ELdSF"
+        "id": "_U-jQU6ELdSF",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 211
+        },
+        "outputId": "41b0561a-d581-4b4f-9563-04c9bc9ca65c"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "IndexError",
+          "evalue": "only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-645288484.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0my\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'variety'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_numpy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0ma\u001b[0m \u001b[0;32min\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'variety'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m   \u001b[0;32mif\u001b[0m \u001b[0ma\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m\"Setosa\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mIndexError\u001b[0m: only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def train_test_split(X,y,test_percent):\n",
+        "  numRows = y.size                     #number or rows in the entire dataset\n",
+        "  splitPoint = int((1-test_percent)*numRows)  #the row index test_size% of the way through\n",
+        "  p = np.random.permutation(numRows)   #array for shuffling data\n",
+        "  X = X[p]\n",
+        "  y = y[p]\n",
+        "\n",
+        "  #Training data array\n",
+        "  X_train = X[:splitPoint]  # training features\n",
+        "  y_train = y[:splitPoint]  # training labels\n",
+        "\n",
+        "  #Testing data array\n",
+        "  X_test = X[splitPoint:]  # testing features\n",
+        "  y_test = y[splitPoint:] # testing labels\n",
+        "\n",
+        "  return X_train, X_test, y_train, y_test"
+      ],
+      "metadata": {
+        "id": "Hfc01sxYF-Eb"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def nn_classify_sample(train_features, train_labels, new_feature):\n",
+        "  dists = np.array([np.sum( (t-new_feature)**2) for t in train_features])\n",
+        "  nearest = dists.argmin()\n",
+        "  return train_labels[nearest]\n",
+        "\n",
+        "def nn_classify(train_features, train_labels, test_features):\n",
+        "  num_result = test_features[:,0].size\n",
+        "  result = np.ones(num_result)\n",
+        "  for i in range(0,num_result):\n",
+        "    result[i] = nn_classify_sample(train_features[:,0:2], train_labels, test_features[i])\n",
+        "  return result"
+      ],
+      "metadata": {
+        "id": "8_Q3zK2hGAhX"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def accuracy(classify, X_train, y_train, X_test, y_test):\n",
+        "  pred = classify(X_train, y_train, X_test)\n",
+        "  correct_pred = (pred == y_test)\n",
+        "  total_preds = y_test.size\n",
+        "  return correct_pred.sum()/total_preds"
+      ],
+      "metadata": {
+        "id": "WvJ_6k6aGC-c"
+      },
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def avg_accuracy(classifier, X, y, count = 200, split=0.33):\n",
+        "  acc = 0\n",
+        "  for _ in range(0,count):\n",
+        "    X_train, X_test, y_train, y_test = train_test_split(X,y,split)\n",
+        "    acc += accuracy(classifier, X_train, y_train, X_test, y_test)\n",
+        "  return acc/count"
+      ],
+      "metadata": {
+        "id": "v1gkDAo9GEPH"
+      },
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# TODO: create a train/test split where 1/3 of the data is used for testing\n",
+        "x_train, x_test, y_train, y_test = train_test_split(X, y, 0.33)\n",
+        "print(X.shape)\n",
+        "print(x_train.shape)\n",
+        "print(x_test.shape)\n",
+        "accuracy(nn_classify, x_train, y_train, x_test, y_test)\n"
+      ],
+      "metadata": {
+        "id": "4710pLcqGF3b"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn import neighbors\n",
+        "from sklearn.neighbors import KNeighborsClassifier"
+      ],
+      "metadata": {
+        "id": "CgvcyQXKGJ5O"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# TODO: write a function that will use KNN to classify a whole array of test features\n",
+        "# Hint: use a wrapper function so that it fits within our accuracy helper function!\n",
+        "def knn_classifier(k):\n",
+        "    def knn_classify(x_train, y_train, x_test):\n",
+        "        knn = KNeighborsClassifier(n_neighbors = k)\n",
+        "        knn.fit(x_train, y_train)\n",
+        "\n",
+        "        return knn.predict(x_test)\n",
+        "    return knn_classify"
+      ],
+      "metadata": {
+        "id": "Q0uV3c-JGLKm"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# TODO: test it out with 2, 5, and 10 neighbors\n",
+        "x_train, x_test, y_train, y_test = train_test_split(X, y, 0.33)\n",
+        "knn = knn_classifier(10)\n",
+        "accuracy(knn, x_train, y_train, x_test, y_test)\n"
+      ],
+      "metadata": {
+        "id": "7WpBzI1mGMr6"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# TODO: find the best performing K testing every third value between 1 - 90\n",
+        "ks = np.arange(1, 51, 2)\n",
+        "test_acc_list = []\n",
+        "train_acc_list = []\n",
+        "\n",
+        "def accuracy(classify, X_train, y_train, X_test, y_test):\n",
+        "  pred = classify(X_train, y_train, X_test)\n",
+        "  correct_pred = (pred == y_test)\n",
+        "  total_preds = y_test.size\n",
+        "  return correct_pred.sum()/total_preds\n",
+        "\n",
+        "for k in ks:\n",
+        "  my_knn = knn_classifier(k)\n",
+        "  test_acc = 0\n",
+        "  train_acc = 0\n",
+        "  for i in range(20): # avg over 20 train-test splits\n",
+        "    X_train, y_train, X_test, y_test = train_test_split(X, y, 0.33)\n",
+        "    test_acc += accuracy(my_knn, X_train, y_train, X_test, y_test) / 20\n",
+        "    train_acc += accuracy(my_knn, X_train, y_train, X_train, y_train) / 20\n",
+        "  train_acc_list.append(train_acc)\n",
+        "  test_acc_list.append(train_acc)\n"
+      ],
+      "metadata": {
+        "id": "Dhb56VPvGQRa"
       },
       "execution_count": null,
       "outputs": []
